fix: handle errors better, adjust spacing

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -1,5 +1,5 @@
 .main {
-  margin-top: 10vh;
+  margin-top: 5rem;
   display: grid;
   grid-template-areas:
     "header"
